<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/medium"
        android:text="@string/daftar_description_text"
        android:textColor="@color/textColorDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/daftar_text"
        android:textColor="@color/textColorDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:fontFamily="@font/mlight"
        android:hint="@string/username_form_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:fontFamily="@font/mlight"
        android:hint="@string/email_form_text"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:fontFamily="@font/mlight"
        android:hint="@string/password_form_text"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:background="@drawable/primary_button"
        android:fontFamily="@font/mmedium"
        android:text="@string/daftar_button_text"
        android:textColor="@color/textColorLight"
        android:textSize="16sp" />

</RelativeLayout>