<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="363dp"
        android:layout_height="294dp"
        android:layout_below="@+id/btnSignup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="-483dp"
        android:contentDescription="@string/illustrator_image_text"
        app:srcCompat="@drawable/illustration" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSignup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-201dp"
        android:width="150dp"
        android:height="31dp"
        android:background="@drawable/primary_button"
        android:text="@string/masuk_button_text"
        android:textColor="#ffff" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="622dp"
        android:layout_toEndOf="@+id/imageView2"
        android:width="150dp"
        android:height="31dp"
        android:background="@drawable/secondary_button"
        android:text="@string/daftar_button_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/mdaring" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="518dp"
        android:text="@string/welcome_text"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="141dp"
        android:text="@string/description_text"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="24dp"
        android:textSize="12sp"
        android:layout_marginBottom="12dp"
        android:text="@string/warning_text" />

</RelativeLayout>