<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/username"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="197dp"
        android:ems="10"
        android:fontFamily="@font/mlight"
        android:inputType="textPersonName"
        android:hint="@string/username_form_text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:background="@drawable/primary_button"
        android:fontFamily="@font/mmedium"
        android:text="@string/lanjut"
        android:textColor="@color/textColorLight"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="285dp"
        android:ems="10"
        android:fontFamily="@font/mlight"
        android:inputType="textPassword"
        android:hint="@string/password_form_text" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/medium"
        android:text="@string/welcome_view_text"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>